--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 .DS_Store
 node_modules
 /dist
+raw_data
+parsed_data
 
 
 # local env files
@@ -21,3 +23,4 @@ pnpm-debug.log*
 *.njsproj
 *.sln
 *.sw?
+src/parsed_data/Schritte.json
