--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "core-js": "^3.6.5",
     "frappe-charts": "^1.6.2",
+    "sqlite3": "^5.0.2",
     "vue": "^2.6.11",
     "vue2-frappe": "^1.2.3",
     "vuetify": "^2.4.0"
