--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "aws-sdk": "^2.1030.0",
     "core-js": "^3.6.5",
     "frappe-charts": "^1.6.2",
     "sqlite3": "^5.0.2",
